fix: hero on mobile

--- a/css/app.css
+++ b/css/app.css
@@ -910,6 +910,7 @@ div.wpforms-container-full button[type=submit] {
 /* Blocks */
 
 .entry-content {
+  display: grid;
   .wp-block-media-text,
     .wpforms-container {
     display: grid;
@@ -917,24 +918,29 @@ div.wpforms-container-full button[type=submit] {
     grid-template-rows: auto;
     grid-column-gap: 10px;
   }
+  .wp-block-group {
+    padding: 0 8%;
+  }
+  .wp-block-media-text.is-stacked-on-mobile {
+    display: grid;
+    grid-template-columns: 1fr !important;
+    grid-template-rows: auto;
+  }
   .wp-block-group .wpforms-container {
     display: inline-block;
   }
-  .wp-block-media-text.is-stacked-on-mobile {
-    grid-template-columns: repeat(12, 1fr) !important;
-  }
   *:first-child,
     *:not(:first-child) {
-    grid-column: 3 / span 4 !important;
+    grid-column: 1 / span 1 !important;
   }
   *:nth-child(2) {
-    grid-column: 7 / span 4 !important;
+    grid-column: 1 / span 1 !important;
   }
   figure:first-child {
-    grid-column: 3 / span 4 !important;
+    grid-column: 1 / span 1 !important;
   }
   figure:last-child {
-    grid-column: 7 / span 4 !important;
+    grid-column: 1 / span 1 !important;
   }
   .wpforms-container {
     display: grid;
@@ -951,6 +957,29 @@ div.wpforms-container-full button[type=submit] {
     .wpforms-container .wpforms-field-row-block {
     width: 100%;
     max-width: 100% !important;
+  }
+}
+
+/* Larger than mobile */
+
+@media screen and (min-width: 600px) {
+  .entry-content {
+    .wp-block-media-text.is-stacked-on-mobile {
+      grid-template-columns: repeat(12, 1fr) !important;
+    }
+    *:first-child,
+        *:not(:first-child) {
+      grid-column: 3 / span 4 !important;
+    }
+    *:nth-child(2) {
+      grid-column: 7 / span 4 !important;
+    }
+    figure:first-child {
+      grid-column: 3 / span 4 !important;
+    }
+    figure:last-child {
+      grid-column: 7 / span 4 !important;
+    }
   }
 }
 
